<resources>
    <string name="app_name">Water Metre Reader</string>
    <string name="water_meter_in_cubic_meter">Water meter reader in cubic meters</string>
    <string name="app_sub_title">smart water metre reader</string>
    <string name="login_text">Log In</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="todo">TODO</string>
    <string name="_01234">01234</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Accounts</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password_reset_hint">Reset password?</string>
    <string name="invalid_username_password">Invalid username/password!</string>
    <string name="contact_admin">Please contact system admin for password reset!</string>
    <string name="username_password_required">Username and password are both required</string>
    <string name="logout">Logout</string>
    <string name="exit_dialog_question">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="connectivity_status">Connectivity status</string>
    <string name="sync_status">Sync Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_main_label">MainActivity</string>
    <string name="title_readings_fragment">Water Metre Readings</string>
    <string name="title_logout_fragment">Logout</string>
    <string name="title_dashboard_fragment">Dashboard</string>
    <string name="title_raeding_detail">Reading Details</string>
    <string name="view_reading_details">View Reading Details</string>
    <string name="three_vertical_dots">⋮</string>
    <string name="userProfileImgDesc">User Profile Image</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="user_id">user id: %1$s</string>
    <string name="token">token: %1$s</string>
    <string name="user_type">user type: %1$s</string>
    <string name="permissions">permissions: %1$s</string>
    <string name="issued_at">issued at: %1$s</string>
    <string name="expires_at">expires at: %1$s</string>
    <string name="is_logged_in">is logged in: %1$s</string>
    <string name="is_logged_out">is logged out: %1$s</string>
    <string name="audience">audience: %1$s</string>
    <string name="token_expired">token expired: %1$s</string>
    <string name="issuer">issuer: %1$s</string>
    <string name="format">%1$td/%1$tm/%1$tY %l$thh:%l$tmm:%l$tss</string>
    <string name="msg_token_fmt">Device Id: %1$s</string>
</resources>
